--- a/src/main/resources/regression/dl21-doc-segmented-unicoil-noexp-0shot-v2.yaml
+++ b/src/main/resources/regression/dl21-doc-segmented-unicoil-noexp-0shot-v2.yaml
@@ -2,6 +2,10 @@
 corpus: msmarco-v2-doc-segmented-unicoil-noexp-0shot-v2
 corpus_path: collections/msmarco/msmarco_v2_doc_segmented_unicoil_noexp_0shot_v2/
 
+download_url: https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/msmarco_v2_doc_segmented_unicoil_noexp_0shot_v2.tar
+download_checksum: 97ba262c497164de1054f357caea0c63
+download_corpus: msmarco_v2_doc_segmented_unicoil_noexp_0shot_v2
+
 index_path: indexes/lucene-index.msmarco-v2-doc-segmented-unicoil-noexp-0shot-v2/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
