--- a/src/main/resources/regression/dl20-passage-splade-distil-cocodenser-medium.yaml
+++ b/src/main/resources/regression/dl20-passage-splade-distil-cocodenser-medium.yaml
@@ -9,7 +9,7 @@ index_path: indexes/lucene-index.msmarco-passage-splade_distil_cocodenser_medium
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
-index_options: -impact -pretokenized
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
   documents: 8841823
   documents (non-empty): 8841823
@@ -67,3 +67,27 @@ models:
         - 0.7619
       R@1000:
         - 0.8901
+  - name: rm3
+    display: +RM3
+    params: -impact -pretokenized -rm3
+    results:
+      AP@1000:
+        - 0.5158
+      nDCG@10:
+        - 0.7126
+      R@100:
+        - 0.7551
+      R@1000:
+        - 0.9080
+  - name: rocchio
+    display: +Rocchio
+    params: -impact -pretokenized -rocchio
+    results:
+      AP@1000:
+        - 0.5133
+      nDCG@10:
+        - 0.7033
+      R@100:
+        - 0.7575
+      R@1000:
+        - 0.8937
