--- a/src/main/resources/regression/msmarco-doc-segmented-unicoil-noexp.yaml
+++ b/src/main/resources/regression/msmarco-doc-segmented-unicoil-noexp.yaml
@@ -9,7 +9,7 @@ index_path: indexes/lucene-index.msmarco-doc-segmented-unicoil-noexp/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
-index_options: -impact -pretokenized
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
   documents: 20545677
   documents (non-empty): 20545677
@@ -67,3 +67,27 @@ models:
         - 0.8639
       R@1000:
         - 0.9420
+  - name: rm3
+    display: +RM3
+    params: -impact -pretokenized -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@1000:
+        - 0.3051
+      RR@100:
+        - 0.3046
+      R@100:
+        - 0.8604
+      R@1000:
+        - 0.9497
+  - name: rocchio
+    display: +Rocchio
+    params: -impact -pretokenized -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@1000:
+        - 0.3092
+      RR@100:
+        - 0.3088
+      R@100:
+        - 0.8667
+      R@1000:
+        - 0.9521
