--- a/src/main/resources/docgen/templates/hc4-v1.0-ru.template
+++ b/src/main/resources/docgen/templates/hc4-v1.0-ru.template
@@ -11,6 +11,20 @@ From one of our Waterloo servers (e.g., `orca`), the following command will perf
 python src/main/python/run_regression.py --index --verify --search --regression ${test_name}
 ```
 
+## Corpus Download
+
+The HC4 corpus can be downloaded following the instructions [here](https://github.com/hltcoe/HC4).
+
+After download, verify that all and only specified documents have been downloaded by running the code [provided here](https://github.com/hltcoe/HC4#postprocessing-of-the-downloaded-documents).
+
+With the corpus downloaded, unpack into `collections/` and run the following command to perform the remaining steps below:
+
+```bash
+python src/main/python/run_regression.py --index --verify --search --regression ${test_name} \
+  --corpus-path collections/${corpus}
+```
+
+
 ## Indexing
 
 Typical indexing command:
