--- a/src/main/resources/regression/msmarco-doc.yaml
+++ b/src/main/resources/regression/msmarco-doc.yaml
@@ -81,6 +81,18 @@ models:
     params: -bm25 -rocchio
     results:
       AP@1000:
+        - 0.1632
+      RR@100:
+        - 0.1624
+      R@100:
+        - 0.6763
+      R@1000:
+        - 0.8789
+  - name: bm25-default+rocchio-neg
+    display: +Rocchio*
+    params: -bm25 -rocchio -rocchio.useNegative -rerankCutoff 1000
+    results:
+      AP@1000:
         - 0.1630
       RR@100:
         - 0.1622
@@ -88,18 +100,6 @@ models:
         - 0.6792
       R@1000:
         - 0.8808
-  - name: bm25-default+rocchio-neg
-    display: +Rocchio*
-    params: -bm25 -rocchio -rocchio.useNegative
-    results:
-      AP@1000:
-        - 0.1658
-      RR@100:
-        - 0.1649
-      R@100:
-        - 0.6826
-      R@1000:
-        - 0.8800
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 3.44 -bm25.b 0.87
@@ -138,7 +138,7 @@ models:
         - 0.9334
   - name: bm25-tuned+rocchio-neg
     display: +Rocchio*
-    params: -bm25 -bm25.k1 3.44 -bm25.b 0.87 -rocchio -rocchio.useNegative
+    params: -bm25 -bm25.k1 3.44 -bm25.b 0.87 -rocchio -rocchio.useNegative -rerankCutoff 1000
     results:
       AP@1000:
         - 0.2271
@@ -186,7 +186,7 @@ models:
         - 0.9316
   - name: bm25-tuned2+rocchio-neg
     display: +Rocchio*
-    params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -rocchio -rocchio.useNegative
+    params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -rocchio -rocchio.useNegative -rerankCutoff 1000
     results:
       AP@1000:
         - 0.2231
